<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="30dp"
        android:layout_above="@+id/finishButon"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="20dp"


        android:foregroundGravity="center_horizontal"
        app:cardBackgroundColor="@color/main_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_distance"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_weight="1"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5 km"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textAlignment="center"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/runtime"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="60 mins"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textAlignment="center"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_speed"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="60 m/s"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textAlignment="center"
                android:layout_weight="4"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--<ImageButton
        android:src="@drawable/yellow_background_button"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/FINISH"
        android:id="@+id/finishButon"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/black"/>!-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:text="@string/FINISH"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/finishButon"
        android:layout_alignParentBottom="true"
        style="@style/Button.Round_corner."
        android:layout_centerInParent="true"/>

</RelativeLayout>