<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FinishFragment">

    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTitleTotalDistance"/>

    <!--<ImageButton
        android:src="@drawable/yellow_background_button"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/FINISH"
        android:id="@+id/finishButon"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/black"/>!-->


     <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:id="@+id/tvTitleTotalDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintBottom_toTopOf="@id/tvTotalDistance"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:textAlignment="center"
        android:background="@color/main_color"
         android:textSize="18sp"
        android:textColor="@color/white"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/tvTotalDistance"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tvTime"
         app:layout_constraintBottom_toTopOf="@id/finishButon"
         android:background="@color/main_color"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textAlignment="gravity"
         android:gravity="center"/>

    <View
        android:id="@+id/divider1"
        style="@style/DividerVertical"
        app:layout_constraintBottom_toTopOf="@id/finishButon"
        app:layout_constraintStart_toEndOf="@id/tvTotalDistance"
        app:layout_constraintEnd_toStartOf="@id/tvTime"
        app:layout_constraintTop_toTopOf="@id/tvTitleTotalDistance" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tvTitleTime"
        android:text="@string/time"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="@id/tvTime"
        app:layout_constraintEnd_toEndOf="@id/tvTime"
        app:layout_constraintBottom_toTopOf="@id/tvTime"
        android:textAlignment="center"
        android:background="@color/main_color"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        android:id="@+id/tvTime"
        app:layout_constraintStart_toEndOf="@+id/tvTotalDistance"
        app:layout_constraintEnd_toStartOf="@+id/tvPace"
        app:layout_constraintBottom_toTopOf="@id/finishButon"
        android:background="@color/main_color"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:gravity="center"/>
    <View
        android:id="@+id/divider2"
        style="@style/DividerVertical"
        app:layout_constraintBottom_toTopOf="@id/finishButon"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintEnd_toStartOf="@id/tvPace"
        app:layout_constraintTop_toTopOf="@id/tvTitleTotalDistance" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pace"
        android:id="@+id/tvTitlePace"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="@id/tvPace"
        app:layout_constraintEnd_toEndOf="@id/tvPace"
        app:layout_constraintBottom_toTopOf="@id/tvPace"
        android:textAlignment="center"
        android:background="@color/main_color"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tvPace"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/finishButon"
        android:background="@color/main_color"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="gravity"
        android:gravity="center"/>

    <View
       style="@style/DividerHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTotalDistance"
        app:layout_constraintBottom_toTopOf="@id/tvTotalDistance"/>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        android:id="@+id/barrier"
        app:constraint_referenced_ids="tvTitleTotalDistance, tvTitleTime, tvTitlePace"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishButon"
        style="@style/Button.Round_corner."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/FINISH"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>